--- a/app/src/main/res/layout/activity_task_creation.xml
+++ b/app/src/main/res/layout/activity_task_creation.xml
@@ -25,7 +25,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="208dp"
         android:padding="10dp"
         android:text="Description:"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="mm/dd/yyyy"
         android:inputType="date"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +90,7 @@
         android:layout_width="114dp"
         android:layout_height="50dp"
         android:text="Create Task"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtPriority"
         app:layout_constraintHorizontal_bias="0.393"
@@ -128,7 +130,6 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:padding="10dp"
-        android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
