--- a/app/src/main/res/layout/activity_task_creation.xml
+++ b/app/src/main/res/layout/activity_task_creation.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:ems="10"
+        android:hint="1-10"
         android:inputType="number"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
