--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,8 @@
         android:icon="@drawable/ic_add"
         android:title="Add New Task"
         app:showAsAction="always"/>
+    <item android:id="@+id/item2"
+        android:icon="@drawable/ic_signout"
+        android:title="Sign Out"
+        app:showAsAction="always"/>
 </menu>
