Code Cleanup, primary color change, bug fixing

--- a/app/src/main/res/layout/activity_sub_task.xml
+++ b/app/src/main/res/layout/activity_sub_task.xml
@@ -64,7 +64,7 @@
         android:layout_height="45dp"
         android:ems="10"
         android:hint="Priority"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,8 +114,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSubTaskView"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_width="389dp"
-        android:layout_height="284dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="@dimen/margin"
+        android:layout_marginBottom="55dp"
+        android:layout_marginTop="375dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
