extracted string resources

--- a/app/src/main/res/layout/activity_task_creation.xml
+++ b/app/src/main/res/layout/activity_task_creation.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:ems="10"
-        android:hint="1-10"
+        android:hint="@string/_1_10"
         android:inputType="number"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
         android:padding="10dp"
-        android:text="Description:"
+        android:text="@string/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:padding="10dp"
-        android:text="Due Date:"
+        android:text="@string/due_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="mm/dd/yyyy"
+        android:hint="@string/mm_dd_yyyy"
         android:inputType="date"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:padding="10dp"
-        android:text="Priority(1-10):"
+        android:text="@string/priority_1_10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
         android:id="@+id/btnCreateTask"
         android:layout_width="114dp"
         android:layout_height="50dp"
-        android:text="Create Task"
+        android:text="@string/create_task"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtPriority"
@@ -103,7 +103,7 @@
         android:id="@+id/btnBack"
         android:layout_width="114dp"
         android:layout_height="50dp"
-        android:text="Back"
+        android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.608"
