--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -11,7 +11,7 @@
         android:id="@+id/lblDate"
         android:layout_width="179dp"
         android:layout_height="23dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.474"
@@ -23,7 +23,7 @@
         android:id="@+id/lblPriority"
         android:layout_width="35dp"
         android:layout_height="55dp"
-        android:text="TextView"
+        android:text=""
 
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
         android:id="@+id/cbxComplete"
         android:layout_width="111dp"
         android:layout_height="63dp"
-        android:text="Completed?"
+        android:text="@string/completed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.98"
@@ -61,7 +61,7 @@
         android:id="@+id/lblTask"
         android:layout_width="181dp"
         android:layout_height="58dp"
-        android:text="TextView"
+        android:text=""
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
