--- a/app/src/main/res/layout/activity_sub_task.xml
+++ b/app/src/main/res/layout/activity_sub_task.xml
@@ -129,7 +129,7 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/return"
+        android:text="@string/returnbtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
